// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-pragma.vue - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["vue"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- @prettier -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<!-- @prettier -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const x = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;

exports[`without-pragma.vue - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["vue"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;
